# Web-viewer

./: .gitignore  README.md  config.yaml  pyproject.toml  websocket_troubleshooting.md
src/: constants.py  run.py  viewer.html
